--- a/next-js-study/package.json
+++ b/next-js-study/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-js-study",
+  "name": "workspace",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.4"
-  },
-  "devDependencies": {
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "20.10.1",
+    "@types/react": "18.2.39",
+    "@types/react-dom": "18.2.17",
+    "eslint": "8.54.0",
+    "eslint-config-next": "14.0.3",
+    "next": "14.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.3.2"
   }
 }
