--- a/next-js-study/package.json
+++ b/next-js-study/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workspace",
+  "name": "foodies",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.10.1",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
-    "eslint": "8.54.0",
-    "eslint-config-next": "14.0.3",
-    "next": "14.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.3.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3"
   }
 }
